# hello-llvm

./: Build.ps1  CMakeLists.txt  LICENSE  LoopConvert.cpp  README.md  azure-pipelines.yml  build.ps1  main.cpp
build-with-nuget/: CMakeLists.txt
build-with-prebuilt/: CMakeLists.txt  README.md
build-with-prebuilt/source/: main.cpp
build-with-vcpkg/: README.md
cmake/: check-variables.cmake  llvm-inc-dirs.cmake  llvm-lib-dirs.cmake  llvm-libs-10.0.0.cmake  llvm-libs-8.0.0.cmake
doc/: diagram.graphml
source/: main.cpp
